--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,9 +6,14 @@
       {{ product.name }}
     </a>
   </h3>
+
   <p *ngIf="product.description">
     {{ product.description }}
   </p>
+
+  <button type="button" (click)="share()">Share</button>
+
+  <app-product-alerts [product]="product"> </app-product-alerts>
 </div>
 
 <!-- 
